--- a/RentACar/RentACar.csproj
+++ b/RentACar/RentACar.csproj
@@ -122,6 +122,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Iznajmljivanje.aspx" />
+    <Content Include="Izvjestaji.aspx" />
     <Content Include="Klijenti.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -186,6 +187,7 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\Db.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
@@ -218,6 +220,13 @@
     </Compile>
     <Compile Include="Iznajmljivanje.aspx.designer.cs">
       <DependentUpon>Iznajmljivanje.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Izvjestaji.aspx.cs">
+      <DependentUpon>Izvjestaji.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Izvjestaji.aspx.designer.cs">
+      <DependentUpon>Izvjestaji.aspx</DependentUpon>
     </Compile>
     <Compile Include="Klijenti.aspx.cs">
       <DependentUpon>Klijenti.aspx</DependentUpon>
